--- a/publication/boosting-comparison-based-learning/index.html
+++ b/publication/boosting-comparison-based-learning/index.html
@@ -394,7 +394,7 @@
   
     
   
-<a class="btn btn-outline-primary my-1 mr-1" href="https://arxiv.org/abs/1810.13333" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1" href="https://arxiv.org/abs/1810.13333" target="" rel="noopener">
   Preprint
 </a>
 
