--- a/publication/comparison-based-hierarchical-clustering/index.html
+++ b/publication/comparison-based-hierarchical-clustering/index.html
@@ -399,7 +399,7 @@
   
     
   
-<a class="btn btn-outline-primary my-1 mr-1" href="https://arxiv.org/abs/1811.00928" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1" href="https://arxiv.org/abs/1811.00928" target="" rel="noopener">
   Preprint
 </a>
 
