Remove useless pages

--- a/404.html
+++ b/404.html
@@ -28,7 +28,7 @@
   
     
   
-  <meta name="description" content="Post-Doc Researcher in Machine Learning">
+  <meta name="description" content="Personal page of Michaël Perrot">
 
   
   <link rel="alternate" hreflang="en-us" href="">
@@ -119,7 +119,7 @@
   <meta property="og:site_name" content="Michaël Perrot">
   <meta property="og:url" content="">
   <meta property="og:title" content="404 Page not found | Michaël Perrot">
-  <meta property="og:description" content="Post-Doc Researcher in Machine Learning"><meta property="og:image" content="https://mperrot.github.io/img/icon-192.png">
+  <meta property="og:description" content="Personal page of Michaël Perrot"><meta property="og:image" content="https://mperrot.github.io/img/icon-192.png">
   <meta property="og:locale" content="en-us">
   
   
