--- a/publication/comparison-based-hierarchical-clustering/index.html
+++ b/publication/comparison-based-hierarchical-clustering/index.html
@@ -287,20 +287,11 @@
   
   <div>
     <span itemscope itemprop="author" itemtype="http://schema.org/Person">
-      <span itemprop="name">
-        <a href="/authors/debarghya-ghoshdastidar/">Debarghya Ghoshdastidar</a>
-      </span>
-    </span>, 
+      <span itemprop="name">Debarghya Ghoshdastidar</span></span>, 
     <span itemscope itemprop="author" itemtype="http://schema.org/Person">
-      <span itemprop="name">
-        <a href="/authors/micha%C3%ABl-perrot/">Michaël Perrot</a>
-      </span>
-    </span>, 
+      <span itemprop="name">Michaël Perrot</span></span>, 
     <span itemscope itemprop="author" itemtype="http://schema.org/Person">
-      <span itemprop="name">
-        <a href="/authors/ulrike-von-luxburg/">Ulrike von Luxburg</a>
-      </span>
-    </span>
+      <span itemprop="name">Ulrike von Luxburg</span></span>
     
   </div>
   
