--- a/publication/perceptual-color-learning/index.html
+++ b/publication/perceptual-color-learning/index.html
@@ -287,25 +287,13 @@
   
   <div>
     <span itemscope itemprop="author" itemtype="http://schema.org/Person">
-      <span itemprop="name">
-        <a href="/authors/micha%C3%ABl-perrot/">Michaël Perrot</a>
-      </span>
-    </span>, 
+      <span itemprop="name">Michaël Perrot</span></span>, 
     <span itemscope itemprop="author" itemtype="http://schema.org/Person">
-      <span itemprop="name">
-        <a href="/authors/amaury-habrard/">Amaury Habrard</a>
-      </span>
-    </span>, 
+      <span itemprop="name">Amaury Habrard</span></span>, 
     <span itemscope itemprop="author" itemtype="http://schema.org/Person">
-      <span itemprop="name">
-        <a href="/authors/damien-muselet/">Damien Muselet</a>
-      </span>
-    </span>, 
+      <span itemprop="name">Damien Muselet</span></span>, 
     <span itemscope itemprop="author" itemtype="http://schema.org/Person">
-      <span itemprop="name">
-        <a href="/authors/marc-sebban/">Marc Sebban</a>
-      </span>
-    </span>
+      <span itemprop="name">Marc Sebban</span></span>
     
   </div>
   
