--- a/publication/speeding-up-syntactic-learning/index.html
+++ b/publication/speeding-up-syntactic-learning/index.html
@@ -287,30 +287,15 @@
   
   <div>
     <span itemscope itemprop="author" itemtype="http://schema.org/Person">
-      <span itemprop="name">
-        <a href="/authors/leonor-becerra-bonache/">Leonor Becerra-Bonache</a>
-      </span>
-    </span>, 
+      <span itemprop="name">Leonor Becerra-Bonache</span></span>, 
     <span itemscope itemprop="author" itemtype="http://schema.org/Person">
-      <span itemprop="name">
-        <a href="/authors/%C3%A9lisa-fromont/">Élisa Fromont</a>
-      </span>
-    </span>, 
+      <span itemprop="name">Élisa Fromont</span></span>, 
     <span itemscope itemprop="author" itemtype="http://schema.org/Person">
-      <span itemprop="name">
-        <a href="/authors/amaury-habrard/">Amaury Habrard</a>
-      </span>
-    </span>, 
+      <span itemprop="name">Amaury Habrard</span></span>, 
     <span itemscope itemprop="author" itemtype="http://schema.org/Person">
-      <span itemprop="name">
-        <a href="/authors/micha%C3%ABl-perrot/">Michaël Perrot</a>
-      </span>
-    </span>, 
+      <span itemprop="name">Michaël Perrot</span></span>, 
     <span itemscope itemprop="author" itemtype="http://schema.org/Person">
-      <span itemprop="name">
-        <a href="/authors/marc-sebban/">Marc Sebban</a>
-      </span>
-    </span>
+      <span itemprop="name">Marc Sebban</span></span>
     
   </div>
   
