--- a/publication/boosting-comparison-based-learning/index.html
+++ b/publication/boosting-comparison-based-learning/index.html
@@ -287,15 +287,9 @@
   
   <div>
     <span itemscope itemprop="author" itemtype="http://schema.org/Person">
-      <span itemprop="name">
-        <a href="/authors/micha%C3%ABl-perrot/">Michaël Perrot</a>
-      </span>
-    </span>, 
+      <span itemprop="name">Michaël Perrot</span></span>, 
     <span itemscope itemprop="author" itemtype="http://schema.org/Person">
-      <span itemprop="name">
-        <a href="/authors/ulrike-von-luxburg/">Ulrike von Luxburg</a>
-      </span>
-    </span>
+      <span itemprop="name">Ulrike von Luxburg</span></span>
     
   </div>
   
