--- a/publication/mapping-estimation-optimal-transport/index.html
+++ b/publication/mapping-estimation-optimal-transport/index.html
@@ -287,25 +287,13 @@
   
   <div>
     <span itemscope itemprop="author" itemtype="http://schema.org/Person">
-      <span itemprop="name">
-        <a href="/authors/micha%C3%ABl-perrot/">Michaël Perrot</a>
-      </span>
-    </span>, 
+      <span itemprop="name">Michaël Perrot</span></span>, 
     <span itemscope itemprop="author" itemtype="http://schema.org/Person">
-      <span itemprop="name">
-        <a href="/authors/nicolas-courty/">Nicolas Courty</a>
-      </span>
-    </span>, 
+      <span itemprop="name">Nicolas Courty</span></span>, 
     <span itemscope itemprop="author" itemtype="http://schema.org/Person">
-      <span itemprop="name">
-        <a href="/authors/r%C3%A9mi-flamary/">Rémi Flamary</a>
-      </span>
-    </span>, 
+      <span itemprop="name">Rémi Flamary</span></span>, 
     <span itemscope itemprop="author" itemtype="http://schema.org/Person">
-      <span itemprop="name">
-        <a href="/authors/amaury-habrard/">Amaury Habrard</a>
-      </span>
-    </span>
+      <span itemprop="name">Amaury Habrard</span></span>
     
   </div>
   
