--- a/publication/metric-hypothesis-transfer-learning/index.html
+++ b/publication/metric-hypothesis-transfer-learning/index.html
@@ -287,15 +287,9 @@
   
   <div>
     <span itemscope itemprop="author" itemtype="http://schema.org/Person">
-      <span itemprop="name">
-        <a href="/authors/micha%C3%ABl-perrot/">Michaël Perrot</a>
-      </span>
-    </span>, 
+      <span itemprop="name">Michaël Perrot</span></span>, 
     <span itemscope itemprop="author" itemtype="http://schema.org/Person">
-      <span itemprop="name">
-        <a href="/authors/amaury-habrard/">Amaury Habrard</a>
-      </span>
-    </span>
+      <span itemprop="name">Amaury Habrard</span></span>
     
   </div>
   
