--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
 
 <p>Since April 2017 I work as a post-doc researcher in the <a href="https://slt.is.tuebingen.mpg.de/" target="_blank">Statistical Learning Theory</a> research group led by <a href="http://www.tml.cs.uni-tuebingen.de/team/luxburg/" target="_blank">Ulrike von Luxburg</a>. This group is part of both the <a href="https://uni-tuebingen.de/" target="_blank">Eberhard Karls Universität Tübingen</a> and the <a href="https://is.tuebingen.mpg.de/" target="_blank">Max Planck Institute for Intelligent Systems</a>. I study the problem of learning from ordinal data, generally termed as Comparison-based Learning.</p>
 
-<p><strong><em>I am currently looking for a new post-doc position!</em></strong></p>
+<p><strong><em>I am currently looking for a new post-doc position! You can download my CV <a href="/files/CVPerrot.pdf">here</a>.</em></strong></p>
 
 
     <div class="row">
