--- a/404.html
+++ b/404.html
@@ -258,6 +258,10 @@
   <h2>Publications</h2>
   
   <ul>
+    <li><a href="/publication/too-relaxed-to-be-fair/">Too Relaxed to be Fair</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/publication/comparison-based-hierarchical-clustering/">Foundations of Comparison-Based Hierarchical Clustering</a></li>
   </ul>
   
@@ -271,10 +275,6 @@
   
   <ul>
     <li><a href="/publication/regressive-virtual-metric-learning/">Regressive Virtual Metric Learning</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="/publication/metric-hypothesis-transfer-learning/">A Theoretical Analysis of Metric Hypothesis Transfer Learning</a></li>
   </ul>
   
   
