Add Fairness paper

--- a/index.html
+++ b/index.html
@@ -472,7 +472,13 @@
 
 
   
+    
+  
 
+
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/files/too-relaxed-to-be-fair/TooRelaxedToBeFair.pdf" target="" rel="noopener">
+  PDF
+</a>
 
 
 
