--- a/publication/too-relaxed-to-be-fair/index.html
+++ b/publication/too-relaxed-to-be-fair/index.html
@@ -390,7 +390,13 @@
 
 
   
+    
+  
 
+
+<a class="btn btn-outline-primary my-1 mr-1" href="/files/too-relaxed-to-be-fair/TooRelaxedToBeFair.pdf" target="" rel="noopener">
+  PDF
+</a>
 
 
 
