Add NeurIPS 2020 paper

--- a/404.html
+++ b/404.html
@@ -258,6 +258,10 @@
   <h2>Publications</h2>
   
   <ul>
+    <li><a href="/publication/near-optimal-comparison-based-clustering/">Near-Optimal Comparison Based Clustering</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/publication/too-relaxed-to-be-fair/">Too Relaxed to be Fair</a></li>
   </ul>
   
@@ -271,10 +275,6 @@
   
   <ul>
     <li><a href="/publication/mapping-estimation-optimal-transport/">Mapping Estimation for Discrete Optimal Transport</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="/publication/regressive-virtual-metric-learning/">Regressive Virtual Metric Learning</a></li>
   </ul>
   
   
