Updated open positions

--- a/index.html
+++ b/index.html
@@ -374,9 +374,7 @@
 <h3 id="open-positions"><strong>Open positions</strong></h3>
 
 <ul>
-<li>Post-doc position on the Interactions between Fairness and Privacy</li>
-<li>6 months internship (M2 level) on <a href="/files/FairnessDecentralized.pdf">Fairness in Decentralized Learning</a></li>
-<li>6 months internship (M2 level) on <a href="/files/FairnessPrivacy.pdf">Fairness and Privacy</a></li>
+<li>(06/11/2023) PhD position on <a href="https://recrutement.inria.fr/public/classic/en/offres/2023-06862">Guaranteed Fairness in Machine Learning</a></li>
 </ul>
 
 
